--- a/imports/ui/homepage/presentation.html
+++ b/imports/ui/homepage/presentation.html
@@ -1,19 +1,27 @@
 <template name="Presentation">
-	<div id="index-banner" class="parallax-container">
-		<div class="section no-pad-bot">
-			<div class="container">
-				<br><br>
-				<h1 class="header center white-text">Un dressing connecté</h1>
-				<div class="row center">
-					<h5 class="header col s12 light">Recherchez des vêtements à louer dans la région</h5>
-				</div>
-				<div class="row center">
-					<a href="/search" id="search-button" class="btn waves-effect waves-light">Rechercher</a>
-				</div>
-				<br><br>
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center white-text main-title">
+          Un dressing connecté
+        </h1>
+        <div class="row center">
+          <h5 class="header col s12 light">
+            Recherchez des vêtements à louer dans la région
+          </h5>
+        </div>
+        <div class="row center">
+          <a href="/search" id="search-button" 
+          class="btn waves-effect waves-light">Rechercher</a>
+        </div>
+        <br><br>
 
-			</div>
-		</div>
-		<div class="parallax"><img src="/images/bigsky.jpg" alt="Unsplashed background img 1"></div>
-	</div>
+      </div>
+    </div>
+    <div class="parallax main-image-container">
+      <img src="/images/interior.jpg" 
+      alt="Unsplashed background img 1">
+    </div>
+  </div>
 </template>
