--- a/imports/ui/pages/clothes-add-page.html
+++ b/imports/ui/pages/clothes-add-page.html
@@ -1,11 +1,16 @@
-<!-- Created by Marc on 29/04/2016. -->
 <template name="Clothes_add_page">
   <div class="row">
   <div class="col s12">
   <div class="container add-cloth-form">
-  <h3 class="header">Ajoutez un nouveau vêtement</h3>
+  <h3 class="header">
+    {{#if isUpdate}}
+      Modifier les informations
+    {{else}}
+      Ajoutez un nouveau vêtement
+    {{/if}}
+  </h3>
       {{# autoForm collection=clothes 
-      id="insertClothForm" type="insert"}}
+      id="insertClothForm" type=formType }}
       <fieldset class="card">
         {{> afQuickField name="name" 
         placeholder="Exemple : Une jolie robe"}}
@@ -14,7 +19,7 @@
         {{> afQuickField name="color"}}
         {{> afQuickField name="gender"}}
         <div class="switch-size">
-          {{> afQuickField name="allowSize"}}
+          {{> afQuickField name="allowSize" defaultValue=hasSize}}
         </div>
         {{#if afFieldValueIs name="allowSize" value=true}}
           <div class="size-value">{{currentSize}}</div>
@@ -42,9 +47,11 @@
         </div> -->
         <div class="form-group form-buttons">
           <button type="submit" 
-          class="btn add-btn grey darken-3">Ajouter</button>
+          class="btn add-btn green">
+            {{#if isUpdate}}Modifier{{else}}Ajouter{{/if}}
+          </button>
           <button type="reset" 
-          class="btn reset-btn grey darken-1">Réinitialiser</button>
+          class="btn reset-btn red lighten-1">Réinitialiser</button>
         </div>
       </fieldset>
       {{/autoForm}}
