--- a/imports/ui/homepage/header.html
+++ b/imports/ui/homepage/header.html
@@ -6,6 +6,9 @@
       <ul class="right hide-on-med-and-down">
         {{> links}}
       </ul>
+      <a href="/dressing" class="right hide-on-large-only">
+         <i class="large material-icons">loyalty</i>
+      </a>
       <ul class="side-nav" id="mobile-demo">
         {{> links}}
       </ul>
