Style et préparation pour le formulaire de mise à jour de profil

--- a/imports/ui/homepage/info-banner.html
+++ b/imports/ui/homepage/info-banner.html
@@ -1,5 +1,5 @@
 <template name="Info_banner">  
-  <h6 style="text-align:center">Les folies sont les seules choses que l'on ne regrette pas !</h6>       
+  <h5 style="text-align:center">Les folies sont les seules choses que l'on ne regrette pas !</h5>       
   {{> block title="1" text="Parcourez les annonces"}}
   {{> block title="2" text="Trouvez le vêtement de vos rêves"}}
   {{> block title="3" text="Louez en ligne"}}
@@ -10,7 +10,7 @@
   <div class="col s12 m3">
     <div class="icon-block">
       <h5 class="center">{{title}}</h5>
-      <p class="light center">{{text}}</p>
+      <h5 class="light center">{{text}}</h5>
     </div>
   </div>
 </template>
