--- a/imports/ui/homepage/footer.html
+++ b/imports/ui/homepage/footer.html
@@ -3,10 +3,10 @@
     <div class="container">
       <div class="row">
         <div class="col l3 s12">
-          <h5 class="white-text">Louer</h5>
+          <h5 class="white-text">La location</h5>
           <ul>
-            <li><a class="white-text" href="#!">Découvrez comment louer des vêtements</a></li>
-            <li><a class="white-text" href="#!">Faites louer vos vêtements</a></li>
+            <li><a class="white-text" href="#!">Découvrez comment louer !</a></li>
+            <li><a class="white-text" href="#!">Louez vos vêtements !</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
@@ -19,17 +19,10 @@
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">A propos</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Qui sommes-nous ?</a></li>
-            <li><a class="white-text" href="#!">Ils parlent de nous</a></li>
-            <li><a class="white-text" href="#!">Les témoignages</a></li>
-          </ul>
+          <h5 class="white-text">Qui sommes-nous ?</h5>
         </div>
         <div class="col l3 s12">
           <ul>
-            <li><a class="white-text" href="/women"><h5>Femme</h5></a></li>
-            <li><a class="white-text" href="/men"><h5>Homme</h5></a></li>
             <li><a class="white-text" href="/blog"><h5>Blog</h5></a></li>
           </ul>
         </div>
@@ -37,7 +30,10 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-darken-3" href="#">The SwapMyStyle Team</a>
+      Réalisé par
+      <a class="brown-text text-darken-3" href="#">Alexandre Chevalier</a> 
+      et
+      <a class="brown-text text-darken-3" href="#">Marc Gilbert</a>
       </div>
     </div>
   </footer>
