--- a/imports/ui/homepage/header.html
+++ b/imports/ui/homepage/header.html
@@ -6,7 +6,7 @@
       <ul class="right hide-on-med-and-down">
         {{> links}}
       </ul>
-      <a href="/dressing" class="right hide-on-large-only">
+      <a href="/dressing" class="right hide-on-large-only dressing-shortcut">
          <i class="large material-icons">loyalty</i>
       </a>
       <ul class="side-nav" id="mobile-demo">
@@ -20,7 +20,6 @@
   <li><a href="/women">Femme</a></li>
   <li><a href="/men">Homme</a></li>
   <li><a href="/dressing">{{dressing_label}}</a></li>
-  <li><a href="/account">Mon Compte</a></li>
   <li><a href="/blog">Blog</a></li>
   {{#if currentUser}}
     <li><a href="/profile">{{profile_label}}</a></li>
