--- a/imports/ui/homepage/theme-item.html
+++ b/imports/ui/homepage/theme-item.html
@@ -1,5 +1,5 @@
 <template name="Theme_item">
-  <div class="col s12 m6 themeBlock">
+  <div class="col s12 m6 theme-block">
     <div class="card">
       <div class="card-image waves-block waves-effect waves-light">
         <img class="" src="{{img}}">
