--- a/imports/ui/pages/home-page.html
+++ b/imports/ui/pages/home-page.html
@@ -28,7 +28,9 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Contactez-nous</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <p class="left-align light">
+           Si vous souhaitez partager avec nous, n'hésitez pas à nous contacter à l'adresse suivante : <a href="mailto:swapyourstyle@gmail.com">swapyourstyle@gmail.com</a>
+          </p>
         </div>
       </div>
 
@@ -36,7 +38,7 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
+<!--   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
@@ -45,5 +47,5 @@
       </div>
     </div>
     <div class="parallax"><img src="/images/clothes-large.jpg" alt="Unsplashed background img 3"></div>
-  </div>
+  </div> -->
 </template>
