--- a/imports/ui/pages/profile-page.html
+++ b/imports/ui/pages/profile-page.html
@@ -1,9 +1,34 @@
 <template name="Profile_page">
+  <div class="row">
+  <div class="col s12">
   <div class="container">
-    <h3>Profil de {{currentUser.username}}</h3>
-    <br>
-    Email : {{currentUser.emails.[0].address}}
-    <br>
-    <button class="btn red darken-4 logout">Déconnexion</button>
+    <h3 class="header">Mon profil</h3>
+
+    <button class="btn red right darken-4 logout">Déconnexion</button>
+---
+<div class="card">
+    {{# autoForm collection=Profiles id="updateProfileForm" 
+    doc=selfProf type="update"}}
+    <fieldset>
+      <legend>{{ getUpdateLegend }}</legend>
+      {{> afQuickField name='firstName'}}
+      {{> afQuickField name='lastName'}}
+      {{> afQuickField name='birthdate'}}
+      {{> afQuickField name='gender'}}
+      {{> afQuickField name='bio' rows=6}}
+      {{> afQuickField name='phoneNumber'}}
+      <legend>{{ getTradAddress }}</legend>
+      {{> afQuickField name='address.street'}}
+      {{> afQuickField name='address.postalCode'}}
+      {{> afQuickField name='address.city'}}
+      {{> afQuickField name='address.country'}}
+      <button type="submit" class="btn btn-primary">Mettre à jour</button>
+      <button type="reset" class="btn btn-default">Réinitialiser</button>
+    </fieldset>
+    {{/autoForm}}
+</div>
+---
+  </div>
+  </div>
   </div>
 </template>
