Formulaire de mise à jour du profil utilisateur Correction des theme-blocks

--- a/imports/ui/pages/home-page.html
+++ b/imports/ui/pages/home-page.html
@@ -16,7 +16,7 @@
   <div class="parallax-container valign-wrapper">
     <div class="row">
       {{> Theme_item title="Mariage" img="/images/wedding.jpg"}}
-      {{> Theme_item title="Soirées à theme" img="/images/sky.jpg"}}
+      {{> Theme_item title="Soirées à theme" img="/images/medium-sky.png"}}
     </div>
     <div class="parallax"><img src="/images/clothes-large.jpg" alt="Unsplashed background img 2"></div>
   </div>
