--- a/imports/ui/pages/profile-page.html
+++ b/imports/ui/pages/profile-page.html
@@ -3,31 +3,29 @@
   <div class="col s12">
   <div class="container">
     <h3 class="header">Mon profil</h3>
+    {{# autoForm collection=profiles 
+      doc=profile
+      id="updateProfileForm" type="update"}}
+      <fieldset>
+        <legend>{{ getUpdateLegend }}</legend>
+        {{> afQuickField name='firstName'}}
+        {{> afQuickField name='lastName'}}
+        {{> afQuickField name='birthdate'}}
+        {{> afQuickField name='gender'}}
+        {{> afQuickField name='bio' rows=6}}
+        {{> afQuickField name='phoneNumber'}}
+        <legend>{{ getTradAddress }}</legend>
+        {{> afQuickField name='address.street'}}
+        {{> afQuickField name='address.postalCode'}}
+        {{> afQuickField name='address.city'}}
+        {{> afQuickField name='address.country'}}
+        <button type="submit" class="btn btn-primary">Mettre à jour</button>
+        <button type="reset" class="btn btn-default">Réinitialiser</button>
+      </fieldset>
+    {{/autoForm}}
 
     <button class="btn red right darken-4 logout">Déconnexion</button>
----
-<div class="card">
-    {{# autoForm collection=Profiles id="updateProfileForm" 
-    doc=selfProf type="update"}}
-    <fieldset>
-      <legend>{{ getUpdateLegend }}</legend>
-      {{> afQuickField name='firstName'}}
-      {{> afQuickField name='lastName'}}
-      {{> afQuickField name='birthdate'}}
-      {{> afQuickField name='gender'}}
-      {{> afQuickField name='bio' rows=6}}
-      {{> afQuickField name='phoneNumber'}}
-      <legend>{{ getTradAddress }}</legend>
-      {{> afQuickField name='address.street'}}
-      {{> afQuickField name='address.postalCode'}}
-      {{> afQuickField name='address.city'}}
-      {{> afQuickField name='address.country'}}
-      <button type="submit" class="btn btn-primary">Mettre à jour</button>
-      <button type="reset" class="btn btn-default">Réinitialiser</button>
-    </fieldset>
-    {{/autoForm}}
-</div>
----
+
   </div>
   </div>
   </div>
