Mise à jour du bouton de création d'un vêtement dans la vue dressing

--- a/imports/ui/pages/dressing-page.html
+++ b/imports/ui/pages/dressing-page.html
@@ -10,7 +10,7 @@
         {{/if}}
       </h3>
       <a class="btn new-cloth-btn" href="/new">Nouveau vêtement</a>
-      <a class="btn edit-dressing-btn" href="/updateDressing">Modifier le Dressing</a>
+<!--       <a class="btn edit-dressing-btn" href="/updateDressing">Modifier le Dressing</a> -->
     </div>
     <br>
     <div class="row">
