--- a/imports/ui/pages/profile-page.html
+++ b/imports/ui/pages/profile-page.html
@@ -1,32 +1,36 @@
 <template name="Profile_page">
   <div class="row">
-  <div class="col s12">
-  <div class="container">
-    <h3 class="header">Mon profil</h3>
-    {{# autoForm collection=profiles 
-      doc=profile
-      id="updateProfileForm" type="update"}}
-      <fieldset>
-        <legend>{{ getUpdateLegend }}</legend>
-        {{> afQuickField name='firstName'}}
-        {{> afQuickField name='lastName'}}
-        {{> afQuickField name='birthdate'}}
-        {{> afQuickField name='gender'}}
-        {{> afQuickField name='bio' rows=6}}
-        {{> afQuickField name='phoneNumber'}}
-        <legend>{{ getTradAddress }}</legend>
-        {{> afQuickField name='address.street'}}
-        {{> afQuickField name='address.postalCode'}}
-        {{> afQuickField name='address.city'}}
-        {{> afQuickField name='address.country'}}
-        <button type="submit" class="btn btn-primary">Mettre à jour</button>
-        <button type="reset" class="btn btn-default">Réinitialiser</button>
-      </fieldset>
-    {{/autoForm}}
+    <div class="col s12">
+      <div class="container">
+        <h3 class="header">Mon profil</h3>
+        {{# autoForm collection=profiles 
+          doc=profile
+          id="updateProfileForm" type="update"}}
+            <legend>{{ getUpdateLegend }}</legend>
+            {{> afQuickField name='firstName'}}
+            {{> afQuickField name='lastName'}}
+            {{> afQuickField name='birthdate'}}
+            {{> afQuickField name='gender'}}
+            {{> afQuickField name='phoneNumber'}}
+            <legend>Adresse</legend>
+            {{> afQuickField name='address.street'}}
+            {{> afQuickField name='address.postalCode'}}
+            {{> afQuickField name='address.city'}}
+            {{> afQuickField name='address.country'}}
+            {{> afQuickField name='bio' rows=6}}
+            <div class="form-group form-buttons">
+              <button type="reset" class="white-text btn-flat red">Réinitialiser</button>
+              <button type="submit" class="white-text btn-flat green">Mettre à jour</button>
+            </div>
+        {{/autoForm}}
 
-    <button class="btn red right darken-4 logout">Déconnexion</button>
+        <br>
 
-  </div>
-  </div>
+      <div class="logout-button">
+        <button class="btn red right darken-4 logout">Déconnexion</button>
+      </div>
+
+      </div>
+    </div>
   </div>
 </template>
