Correction des images dans le formulaire d'ajout de vêtement Correction des sliders Ajout d'une barre de recherche dans la vue /search Style général

--- a/imports/ui/pages/home-page.html
+++ b/imports/ui/pages/home-page.html
@@ -28,8 +28,11 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Contactez-nous</h4>
-          <p class="left-align light">
-           Si vous souhaitez partager avec nous, n'hésitez pas à nous contacter à l'adresse suivante : <a href="mailto:swapyourstyle@gmail.com">swapyourstyle@gmail.com</a>
+          <p class="center-align flow-text">
+            Vous avez des remarques, des suggestions, des questions ? 
+            Ou si vous souhaitez tout simplement échanger et partager avec nous, n'hésitez pas à nous contacter aux adresses suivantes :<br>
+            <a href="mailto:dev.alexandre.chevalier@gmail.com">Alexandre Chevalier</a><br>
+            <a href="mailto:marcgilbert07@gmail.com">Marc Gilbert</a>
           </p>
         </div>
       </div>
