--- a/imports/ui/pages/clothes-add-page.html
+++ b/imports/ui/pages/clothes-add-page.html
@@ -1,68 +1,73 @@
 <template name="Clothes_add_page">
   <div class="row">
-  <div class="col s12">
-  <div class="container add-cloth-form">
-  <h3 class="header">
-    {{#if updating}}
-      Modifier les informations
-    {{else}}
-      Ajoutez un nouveau vêtement
-    {{/if}}
-  </h3>
-    {{# autoForm collection=clothes
-      doc=clothToUpdate
-      id="insertClothForm" type=formType}}
-      <fieldset class="card">
-        {{> afQuickField name="name"
-          placeholder="Exemple : Une jolie robe"}}
-        {{> afQuickField name="type"}}
-        {{> afQuickField name="theme"}}
-        {{> afQuickField name="color"}}
-        {{> afQuickField name="gender"}}
-        <div class="switch-size">
-          {{> afQuickField name="allowSize" defaultValue=hasSize}}
-        </div>
-        {{#if afFieldValueIs name="allowSize" value=true}}
-          <div class="size-value">{{currentSize}}</div>
-          {{> size_slider}}
+    <div class="col s12">
+      <div class="container add-cloth-form">
+      <h3 class="header">
+        {{#if updating}}
+          Modifier les informations
+        {{else}}
+          Ajoutez un nouveau vêtement
         {{/if}}
-        {{> price_slider}}
-        <div class="price-wrapper">
-          <div class="price green btn-large">
-            <span class="white-text light">{{currentPrice}}€/j</span>
-          </div>
-        </div>
-        {{> afQuickField name="description" 
-          placeholder="Exemple : Une robe parfaite pour les soirées !" 
-          rows=6}}
-<!--    <div class="file-field">
-          <button class="btn grey darken-3">
-            <span>Image</span>
-            {{> afFieldInput disabled=waitingForApiResponse 
-            name='image' type='file' id='fileInput'}}
-          </button>
-          <div class="file-path-wrapper">
-            <input class="file-path validate" type="text" 
-            placeholder="(Ajoutez une image)">
-          </div>
-        </div> -->
-        <div class="form-group form-buttons">
-          <button type="submit" 
-          class="btn add-btn green">
-            {{#if updating}}Sauvegarder{{else}}Ajouter{{/if}}
-          </button>
-          {{#if updating}}
-<!--             <button type="" 
-            class="btn reset-btn red lighten-1">Réinitialiser</button> -->
-          {{else}}
-            <button type="reset" 
-            class="btn reset-btn red lighten-1">Réinitialiser</button>
-          {{/if}}
-        </div>
-      </fieldset>
-      {{/autoForm}}
-  </div>
-  </div>
+      </h3>
+        {{# autoForm collection=clothes
+          doc=clothToUpdate
+          id="insertClothForm" type=formType}}
+          <fieldset class="card">
+            {{> afQuickField name="name"
+              placeholder="Exemple : Une jolie robe"}}
+            {{> afQuickField name="type"}}
+            {{> afQuickField name="theme"}}
+            {{> afQuickField name="color"}}
+            {{> afQuickField name="gender"}}
+            <div class="switch-size">
+              {{> afQuickField name="allowSize" defaultValue=hasSize}}
+            </div>
+            {{#if afFieldValueIs name="allowSize" value=true}}
+              <div class="size-value">{{currentSize}}</div>
+              {{> size_slider}}
+            {{/if}}
+            {{> price_slider}}
+            <div class="price-wrapper">
+              <div class="price green btn-large">
+                <span class="white-text light">{{currentPrice}}€/j</span>
+              </div>
+            </div>
+            {{#if updating}}
+
+            {{else}}
+              <div class="file-field">
+                <button class="btn grey darken-3">
+                  <span>Image</span>
+                  {{> afFieldInput disabled=waitingForApiResponse 
+                  name='image' type='file' id='fileInput'}}
+                </button>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text" 
+                  placeholder="(Ajoutez une image)">
+                </div>
+              </div>
+            {{/if}}
+
+            {{> afQuickField name="description" 
+              placeholder="Exemple : Une robe parfaite pour les soirées !" 
+              rows=6}}
+            <div class="form-group form-buttons">
+              <button type="submit" 
+              class="btn add-btn green">
+                {{#if updating}}Sauvegarder{{else}}Ajouter{{/if}}
+              </button>
+              {{#if updating}}
+                <!-- Another button ? -->
+              {{else}}
+                <button type="reset" 
+                class="btn reset-btn red lighten-1">Réinitialiser</button>
+              {{/if}}
+            </div>
+          </fieldset>
+          {{/autoForm}}
+
+      </div>
+    </div>
   </div>
 </template>
 
