--- a/imports/ui/homepage/footer.html
+++ b/imports/ui/homepage/footer.html
@@ -20,6 +20,11 @@
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Qui sommes-nous ?</h5>
+            <ul>
+              <li><a class="white-text" href="#!">L'équipe</a></li>
+              <li><a class="white-text" href="#!">Alexandre Chevalier</a></li>
+              <li><a class="white-text" href="#!">Marc Gilbert</a></li>
+            </ul>
         </div>
         <div class="col l3 s12">
           <ul>
