--- a/imports/ui/pages/home-page.html
+++ b/imports/ui/pages/home-page.html
@@ -13,12 +13,12 @@
     </div>
   </div>
 
-  <div class="parallax-container valign-wrapper">
+  <div id="index-banner" class="parallax-container valign-wrapper">
     <div class="row">
       {{> Theme_item title="Mariage" img="/images/wedding.jpg"}}
       {{> Theme_item title="Soirées à theme" img="/images/medium-sky.png"}}
     </div>
-    <div class="parallax"><img src="/images/clothes-large.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax main-image-container"><img src="/images/clothes-large.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
