--- a/imports/ui/pages/clothes-view-page.html
+++ b/imports/ui/pages/clothes-view-page.html
@@ -27,7 +27,7 @@
                 <div class="price green btn-large">
                   <span class="white-text">{{cloth.price}}€/j</span>
                 </div>
-                <div class="blue btn-large">
+                <div id="location" class="blue btn-large">
                   <span class="white-text medium">louer</span>
                 </div>              
               </div>
