--- a/imports/ui/pages/clothes-view-page.html
+++ b/imports/ui/pages/clothes-view-page.html
@@ -28,8 +28,9 @@
                   <span class="white-text">{{cloth.price}}€/j</span>
                 </div>
                 <div id="location" class="blue btn-large">
-                  <span class="white-text medium">louer</span>
-                </div>              
+                  <span class="white-text medium">Louer</span>
+                </div>
+                <div id="multidatespicker" style="visibility:hidden;"><br/>Choisir les dates désirées (date de début et date de fin)</div>
               </div>
             </div>
 
