--- a/imports/ui/pages/clothes-booking-page.html
+++ b/imports/ui/pages/clothes-booking-page.html
@@ -14,8 +14,14 @@
               <span class="white-text">{{cloth.price}}€/j</span>
             </div>
           </div>
-          Choisir la période désirée (date de début et date de fin)
-          <div id="multidatespicker"></div>
+
+          <div class="dispo-datepicker">
+            <label class="control-label">
+              Période désirée (date de début & date de fin) :
+            </label>
+            <div id="multidatespicker"></div>
+          </div>
+
           <div class="form-group form-buttons">
             <div class="price green btn-large">
               <span class="white-text">Prix total : {{getPrice}} €</span>
