Modification barre de recherche

--- a/imports/ui/pages/clothes-add-page.html
+++ b/imports/ui/pages/clothes-add-page.html
@@ -35,7 +35,7 @@
               <div class="file-field">
                 <button class="btn grey darken-3">
                   <span>Image</span>
-                  <input type="file" name="image" id='fileInput' accept="image/*" disabled="{{waitingForApiResponse}}">
+                  <input type="file" name="image" id='fileInput disabled' accept="image/*" disabled="{{waitingForApiResponse}}">
                 </button>
                 <div class="file-path-wrapper">
                   <input class="file-path validate" type="text" 
