--- a/imports/ui/pages/search-page.html
+++ b/imports/ui/pages/search-page.html
@@ -11,8 +11,10 @@
 </template>
 
 <template name="searchBox">
-  {{> EasySearch.Input index=clothesIndex }}
-
+  <div class="input-field col s12">
+    {{> EasySearch.Input index=clothesIndex id="inputSearch"}}
+    <label for="inputSearch">Rechercher...</label>
+  </div>
   <ul>
     {{#EasySearch.Each index=clothesIndex }}
       {{> Clothes_item cloth=this}}
