--- a/imports/ui/pages/dressing-page.html
+++ b/imports/ui/pages/dressing-page.html
@@ -3,8 +3,8 @@
     <div class="dressing-header">
       <!-- TODO : possibility to display a reactive input here for renaming -->
       <h3>
-        {{#if currentUser.dressing_name}}
-          {{currentUser.dressing_name}}
+        {{#if dressingName}}
+          {{dressingName}}
         {{else}}
           Mon dressing
         {{/if}}
