--- a/imports/ui/pages/profile-page.html
+++ b/imports/ui/pages/profile-page.html
@@ -27,9 +27,10 @@
         {{/autoForm}}
 
         <br>
+        <br>
 
       <div class="logout-button">
-        <button class="btn red right darken-4 logout">Déconnexion</button>
+        <button class="btn-flat red white-text center darken-4 logout">Déconnexion</button>
       </div>
 
       </div>
