--- a/imports/ui/pages/home-page.html
+++ b/imports/ui/pages/home-page.html
@@ -30,7 +30,7 @@
           <h4>Contactez-nous</h4>
           <p class="center-align flow-text">
             Vous avez des remarques, des suggestions, des questions ? 
-            Ou si vous souhaitez tout simplement échanger et partager avec nous, n'hésitez pas à nous contacter aux adresses suivantes :<br>
+            <br><br>Si vous souhaitez échanger et partager avec nous, n'hésitez pas à nous contacter aux adresses suivantes :<br><br>
             <a href="mailto:dev.alexandre.chevalier@gmail.com">Alexandre Chevalier</a><br>
             <a href="mailto:marcgilbert07@gmail.com">Marc Gilbert</a>
           </p>
