--- a/imports/ui/homepage/info-banner.html
+++ b/imports/ui/homepage/info-banner.html
@@ -2,14 +2,14 @@
   <h5 style="text-align:center">Les folies sont les seules choses que l'on ne regrette pas !</h5>       
   {{> block title="1" text="Parcourez les annonces"}}
   {{> block title="2" text="Trouvez le vêtement de vos rêves"}}
-  {{> block title="3" text="Louez en ligne"}}
+  {{> block title="3" text="Réservez-le en ligne"}}
   {{> block title="4" text="Passez chercher votre article"}}
 </template>
 
 <template name="block">
   <div class="col s12 m3">
     <div class="icon-block">
-      <h5 class="center">{{title}}</h5>
+      <h5 class="center number">{{title}}</h5>
       <h5 class="light center">{{text}}</h5>
     </div>
   </div>
