--- a/imports/ui/pages/dressing-view-page.html
+++ b/imports/ui/pages/dressing-view-page.html
@@ -1,7 +1,7 @@
 <template name="Dressing_view_page">
   <div class="row">
     <div class="col s12">
-      <div class="container view-cloth-form">
+      <div class="container">
         <h3 class="header">{{dressing.name}}</h3>
         Propriétaire : {{getOwnerUserName}}
         <div class="img-wrapper">
